<resources>
    <string name="app_name">GGR494</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="highestAmenity">%1$d</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_filter">FilterActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_toFilter">Go To Filter Page</string>
    <string name="toMap">Go to Map Page</string>
    <string name="_1st_user_location">1st User Location</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="amenitiy">Amenitiy</string>
    <string name="_0">0</string>
    <string name="n">N</string>
    <string name="_1st">1st</string>
    <string name="location_not_entered">Location Not Entered</string>
    <string name="user_locations">User Locations</string>
    <string name="_2nd">2nd</string>
    <string name="_3rd">3rd</string>
    <string name="_4th">4th</string>
    <string name="enter_a_distance">Enter a Distance</string>
    <string name="how_far_from_this_point">How far from this point?</string>
    <string name="enter_a_distance_km">Enter a Distance (km)</string>
    <string name="confirm">Confirm</string>
    <string name="how_far_away_form_this_point_km">How far away form this point? (KM)</string>
    <string name="Searching">Searching...</string>
</resources>