<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/PopupAmenityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/amenitiy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PopupAmenityLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PopupAmenityName" />
    <SeekBar
        android:id="@+id/PopUpSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="1"
        app:layout_constraintEnd_toStartOf="@+id/PopupAmenityHigh"
        app:layout_constraintStart_toEndOf="@+id/PopupAmenityLow"
        app:layout_constraintTop_toBottomOf="@+id/PopupAmenityName" />

    <TextView
        android:id="@+id/PopupAmenityHigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PopupAmenityName" />


</androidx.constraintlayout.widget.ConstraintLayout>